kubernetes/AWS-k8s/portfolioconfigfile-react-app-deployment.yml
apiVersion: v1
kind: Namespace
metadata:
  name: stagging

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-react-app-pods-deployment
  namespace: stagging
  labels:
    app: portfolio-react-app-pods
spec:
  replicas: 2
  selector:
    matchLabels:
      app: portfolio-react-app-pods
  template:
    metadata:
      labels:
        app: portfolio-react-app-pods
    spec:
      containers:
        - name: portfolio-react-app-pods
          image: daddykiki/godwin-portfolio-react-app-001 #image from docker hub
          ports:
            - containerPort: 3000
          imagePullPolicy: Always

---

apiVersion: v1
kind: Service
metadata:
  name: portfolio-react-app-service
  namespace: stagging
  labels:
    app: portfolio-react-app-service
spec:
  selector:
    app: portfolio-react-app-pods
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 3000
