kubernetes/AWS-k8s/portfolioconfigfile-react-app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-react-app-service
  labels:
    app: portfolio-react-app-service
spec:
  selector:
    app: portfolio-react-app-pods
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 3000
  type: LoadBalancer
