kubernetes/AWS-k8s/nginx-ingress-resource-manifest-file.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: godwin-portfolio-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: godwinportfolio-app.cpm
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: nginx-manifest-file
            port:
              number: 80
